# YUIAssistant

./: .gitignore  README.md
YUIAssistant/: settings.gradle.kts
YUIAssistant/app/: build.gradle.kts
YUIAssistant/app/src/androidTest/java/com/yui/assistant/: ExampleInstrumentedTest.kt
YUIAssistant/app/src/main/: AndroidManifest.xml
YUIAssistant/app/src/main/java/com/yui/assistant/: MainActivity.kt
YUIAssistant/app/src/main/java/com/yui/assistant/model/: ServerResponse.kt
YUIAssistant/app/src/main/java/com/yui/assistant/network/: ApiService.kt  RetrofitClient.kt
YUIAssistant/app/src/main/java/com/yui/assistant/training/: VoiceTrainer.kt
YUIAssistant/app/src/main/java/com/yui/assistant/ui/: MainScreen.kt
YUIAssistant/app/src/main/java/com/yui/assistant/ui/components/: VoiceButton.kt
YUIAssistant/app/src/main/java/com/yui/assistant/ui/theme/: Color.kt  Theme.kt  Type.kt
YUIAssistant/app/src/main/java/com/yui/assistant/utils/: PermissionUtils.kt
YUIAssistant/app/src/main/java/com/yui/assistant/voice/: VoiceRecorder.kt  WakeWordDetector.kt
YUIAssistant/app/src/main/res/values/: strings.xml  themes.xml
YUIAssistant/app/src/main/res/xml/: network_security_config.xml
YUIAssistant/app/src/test/java/com/yui/assistant/: ExampleUnitTest.kt
YUIAssistant/gradle/wrapper/: gradle-wrapper.properties
voice_server/: Cargo.toml  Dockerfile  build.rs
voice_server/src/: main.rs
voice_server/src/routes/: audio.rs
voice_server/src/services/: deepseek.rs  mod.rs  stt.rs
