[package]
name = "voice_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower = "0.4"
tracing = "0.1"
vosk = "0.3.1"
hyper = "0.14"
hound = "3.5.1"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
fs_extra = "1.2"